--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SmartHome</string>
+
+    <!-- Actions -->
+    <string name="action_loading">Завантаження</string>
 </resources>
