--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="title_living_room">Вітальня</string>
     <string name="title_kitchen">Кухня</string>
 
+    <!-- login -->
+    <string name="login_chernysh_home_title">Chernysh\nDynastija Home</string>
+    <string name="login_enter_pin">Пін код або Fingerprint</string>
+
 </resources>
