--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="action_reload">Перезавантажити</string>
 
     <!-- Temperature and humidity card -->
-    <string name="temperature_text">%1$f &#8451;</string>
-    <string name="humidity_text">%1$f &#37;</string>
+    <string name="temperature_text">%1$.1f &#8451;</string>
+    <string name="humidity_text">%1$.1f %%</string>
     <string name="temperature_humidity_generic_error">Відбулась помилка при отриманні даних.</string>
     <string name="temperature_humidity_socket_disconnected">Відключено від серверу</string>
     <string name="temperature_humidity_socket_reconnecting">Підключаємось до серверу</string>
