--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="action_yes">Так</string>
     <string name="action_no">Ні</string>
     <string name="action_reload">Перезавантажити</string>
+    <string name="action_logout">Вийти</string>
+    <string name="action_stay">Продовжити керувати</string>
 
     <!-- Temperature and humidity card -->
     <string name="temperature_text">%1$.1f &#8451;</string>
@@ -58,4 +60,7 @@
 
     <string name="flat_alert_dialog_title">Увімкнути сирену?</string>
     <string name="flat_alert_dialog_text">Не потрібно просто так гратись з сиреною. Може прийти злий сусід та наваляти тобі. Якщо ж ти впевнений в тому, що в квартиру увірвався злодій, хутчіше тисни на ТАК!!</string>
+
+    <string name="logout_title">Ти серйозно?</string>
+    <string name="logout_message">Невже ти хочеш вийти з цього витвору мистецтва? Твоя квартира хоч і розумна, але потребує надійного керівника&#8230;</string>
 </resources>
