Added Camera screen so we can look there

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="flat_netun">Нептун</string>
     <string name="flat_fire">Пожежна безпека</string>
     <string name="flat_security">Охорона</string>
+    <string name="flat_camera">Камера</string>
     <string name="flat_outside_of_flat">За межами квартири:</string>
 
     <string name="flat_alert_dialog_title">Увімкнути сирену?</string>
