--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="action_reload">Перезавантажити</string>
     <string name="action_logout">Вийти</string>
     <string name="action_stay">Продовжити керувати</string>
+    <string name="action_save">Зберегти</string>
 
     <!-- Temperature and humidity card -->
     <string name="temperature_text">%1$.1f &#8451;</string>
