--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,9 @@
     <string name="flat_alert_dialog_title">Увімкнути сирену?</string>
     <string name="flat_alert_dialog_text">Не потрібно просто так гратись з сиреною. Може прийти злий сусід та наваляти тобі. Якщо ж ти впевнений в тому, що в квартиру увірвався злодій, хутчіше тисни на ТАК!!</string>
 
+    <string name="flat_security_dialog_title">Увімкнути охорону?</string>
+    <string name="flat_security_dialog_text">Закрий двері у ванну!!! Інакше коли бандити увірвуться в дім, камера не зможе їх розпізнати. Також, перевір чи вимкнено світло у хаті та нічого не загрожує пожежній безпеці.</string>
+
     <string name="logout_title">Ти серйозно?</string>
     <string name="logout_message">Невже ти хочеш вийти з цього витвору мистецтва? Твоя квартира хоч і розумна, але потребує надійного керівника&#8230;</string>
 
